c4prj2_input/grade.txt
Grading at Wed Mar 10 15:23:52 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:23:30: error: incompatible types when assigning to type ‘deck_t {aka struct deck_tag}’ from type ‘deck_t * {aka struct deck_tag *}’
       fc->decks[fc->n_decks] = hand; 
                              ^
Compilation of input.c failed

Overall Grade: F
